syntax = "proto3";

package mpcservice;

service MPCService {
    rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {}
    rpc GenerateKeyPair(GenerateKeyPairRequest) returns (GenerateKeyPairResponse) {}
    rpc GeneratePartialKey(GeneratePartialKeyRequest) returns (GeneratePartialKeyResponse) {}
    rpc ExchangePartialKey(ExchangePartialKeyRequest) returns (ExchangePartialKeyResponse) {}
    rpc ProvePartialKeyCommitment(ProvePartialKeyCommitmentRequest) returns (ProvePartialKeyCommitmentResponse) {}
    rpc ExchangeKey(ExchangeKeyRequest) returns (ExchangeKeyResponse) {}
    rpc ProveKeyCommitment(ProveKeyCommitmentRequest) returns (ProveKeyCommitmentResponse) {}
}

message HealthCheckRequest {}

message HealthCheckResponse {
    string status = 1;
}

message GenerateKeyPairRequest {}

message GenerateKeyPairResponse {
    string key_id = 1;
}

message GeneratePartialKeyRequest {
    string key_id = 1;
}

message GeneratePartialKeyResponse {}

message ExchangePartialKeyRequest {
    string key_id = 1;
    string commitment = 2;
}

message ExchangePartialKeyResponse {
    string key_id = 1;
    string public_key = 2;
}

message ProvePartialKeyCommitmentRequest {
    string key_id = 1;
    string proof = 2;
}

message ProvePartialKeyCommitmentResponse {
    string key_id = 1;
    bool verified = 2;
}

message ExchangeKeyRequest {
    string key_id = 1;
    string commitment = 2;
}

message ExchangeKeyResponse {
    string key_id = 1;
    string public_key = 2;
}

message ProveKeyCommitmentRequest {
    string key_id = 1;
    string proof = 2;
}

message ProveKeyCommitmentResponse {
    string key_id = 1;
    bool verified = 2;
}